objects/ssot__VehicleTelematicsEventFaultCdMap__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FaultCodeId__c</fullName>
        <label>Fault Code</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FaultCodeSensorValuesText__c</fullName>
        <label>Fault Code Sensor Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FaultResolutionDate__c</fullName>
        <label>Fault Resolution Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__FaultResolutionType__c</fullName>
        <label>Fault Resolution Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FreezeFrameId__c</fullName>
        <label>Freeze Frame Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Vehicle Telematics Event Fault Cd Map Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VehicleTelematicsEventId__c</fullName>
        <label>Vehicle Telematics Event</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761232916_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VehicleTelematicsEventFaultCdMap_Fau_rel</label>
        <referenceTo>ssot__CodeSet__dlm</referenceTo>
        <relationshipLabel>VehicleTelematicsEventFaultCdMap_Fau_rel</relationshipLabel>
        <relationshipName>rel_1697761232916_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761232994_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VehicleTelematicsEventFaultCdMap_Veh_rel</label>
        <referenceTo>ssot__VehicleTelematicsEvent__dlm</referenceTo>
        <relationshipLabel>VehicleTelematicsEventFaultCdMap_Veh_rel</relationshipLabel>
        <relationshipName>rel_1697761232994_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>